2004-01-24  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/relax-swap1.s: Add extra space at end, so the
	disassembly will consistently have "..." at its end.
	* gas/mips/relax-swap2.s: Likewise.
	* gas/mips/relax-swap1-mips2.d: Expect "..." at end of disassembly.

2004-01-23  Daniel Jacobowitz  <drow@mvista.com>

	* gas/arm/arm.exp: Add "undefined" test.
	* gas/arm/undefined.s, gas/arm/undefined.l: New files.

2004-01-23  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/macro-warn-[1234].[sdl]: New tests.
	* gas/mips/macro-warn-[12]-n32.[dl]: New tests.
	* gas/mips/mips.exp: Run them.

2004-01-23  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel19.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2004-01-11 Tom Rix   <tcrix@worldnet.att.net>

	* gas/m68hc11/movb.s: Add m68hc12 movb and movw dump test.
	* gas/m68hc11/movb.d: Likewise.
	* gas/m68hc11/m68hc11.exp: Likewise.  Add more movb failure tests.

2004-01-19  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/katmai.d: Adjust for changed sib printing.
	* gas/i386/prescott.d: Likewise.
	* gas/i386/sse2.d: Likewise.
	* gas/i386/ssemmx2.d: Likewise.

2004-01-16  Alexandre Oliva  <aoliva@redhat.com>

	* gas/mn10300/mov5.s: New.
	* gas/mn10300/basic.exp (do_mov5): New.

2004-01-14  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/relax-swap1-mips1.d: New test for branch relaxation
	with swapping for MIPS1.
	* gas/mips/relax-swap1-mips2.d: New test for branch relaxation
	with swapping for MIPS2.
	* gas/mips/relax-swap1.l: Stderr output for the new tests.
	* gas/mips/relax-swap1.s: Source for the new tests.
	* gas/mips/relax-swap2.d: New test for branch likely relaxation
	with swapping.
	* gas/mips/relax-swap2.l: Stderr output for the new test.
	* gas/mips/relax-swap2.s: Source for the new test.
	* gas/mips/mips.exp: Run the new tests.

2004-01-13  Ian Lance Taylor  <ian@wasabisystems.com>

	* gas/mips/mips16-64.d: New test.
	* gas/mips/mips.exp: Run it.
